minor thesis edits & spellcheck

--- a/tex/ch1.tex
+++ b/tex/ch1.tex
@@ -53,7 +53,7 @@ such biological pathways.  These products are known by various names, such as
 The first protein therapeutic to be synthesised on a large scale using 
 biological pathways was insulin, which is a hormone used to regulate metabolism
 and is administered to individuals suffering from diabetes.  Human insulin has a
-molar mass of approximately 5808 g/mol.  It was not possible to commercialy
+molar mass of approximately 5808 g/mol.  It was not possible to commercially
 synthesise insulin chemically and it was initially produced by extracting the
 hormone from the pancreases of mammals such as cows or pigs.  In 1978, 
 scientists working at  the American company Genentech (now a subsidiary of the
@@ -67,7 +67,7 @@ known as the \emph{biopharmaceutical industry}, or, colloquially, as the
 McKinsey \& Company \citep{Otto:2014} estimates that the biopharmaceutical 
 market had global revenues of \$163 billion per annum and was worth 20\% of the
 overall pharmaceutical market.  \citet{Otto:2014} also note that large-scale
-biopharmaceutical manufactring facilities typically cost in the region of
+biopharmaceutical manufacturing facilities typically cost in the region of
 ``\$200 million to \$500 million or more'' to build.
 
 \subsection{Bioprocess Engineering}\label{SS.bioproceng}
@@ -104,7 +104,7 @@ occurs, but it usually is defined as being at some point in the harvest section.
 Downstream processing is concerned with taking the cell-free but otherwise 
 contaminated batch and purifying it through a series of orthogonal processes.
 Such processes can include filtration, ultrafiltration/diafiltration 
-(\emph{UF/DF}), chromatogrpahy, reaction, virus inactivation and formulation.
+(\emph{UF/DF}), chromatography, reaction, virus inactivation and formulation.
 At the end of downstream processing, a batch should consist of formulated bulk
 product, ready to be filled into its final packaging for delivery. The final 
 fill/finish steps often occur in a separate, sterile facility.
@@ -116,7 +116,7 @@ to be prepared and stored.  Solutions used upstream are typically referred to as
 \emph{media} and those used downstream are typically referred to as
 \emph{buffers}.  Strictly speaking, media refers to the solutions of nutrients
 into which cells are expanded, but the term is usually used to encompass all
-other upstream solutions, such as acids and bases antifoam used in the
+other upstream solutions, such as acids and bases anti-foam used in the
 bioreactors.  Strictly speaking, a chemist would define a buffer as a solution
 which maintains its pH over a wide range of concentrations.  Most solutions used
 downstream do indeed meet this criteria, but the term \emph{buffers} is
@@ -137,7 +137,7 @@ As a result, there are typically two main areas where solutions are prepared.
 Buffers are prepared in an area called \emph{buffer preparation}, for use
 downstream and media are prepared in an area called \emph{media preparation},
 for use upstream.
-There may also be a seperate area for preparing sterile buffers for the final
+There may also be a separate area for preparing sterile buffers for the final
 formulation, again to reduce the possibility of contamination and ensure
 sterility is maintained.
 In both media and buffer preparation, one vessel is used to prepare the solution
@@ -173,15 +173,15 @@ succession, this then involves a requirement for multiple hold vessels so
 some buffers can be made ahead of time.  Where buffers are required for multiple
 steps in an operation or across multiple operations, is it best to perform
 many preparations, or few?  Additionally, is it best to hold the buffer
-in many seperate hold vessels, allowing them to be individually freed up more
+in many separate hold vessels, allowing them to be individually freed up more
 quickly, or is it better to consolidate and minimised the number of vessels?
 Defining success in the design of buffer preparation is also difficult.
 There exist trade-offs between efficiency and flexibility, capital and 
 operating costs, and many other factors such as installed area, installed 
-volume, operability, layout/adjacency, piepwork complexity and cleanability.
+volume, operability, layout/adjacency, pipework complexity and cleanability.
 
 Due to the high salt concentrations in some buffers, they can prove corrosive
-to the commonly used grades of stianless steel, such as 316L.  Such buffers
+to the commonly used grades of stainless steel, such as 316L.  Such buffers
 may have to be prepared or held in vessels made from expensive alloys such as
 AL-6XN\textsuperscript{\textregistered}, which is about 3.5 times more
 expensive than 316L, or a steel from the
@@ -222,7 +222,7 @@ An additional factor is that a working solution may exist for a given
 configuration, but the scheduling software is unable to resolve the problem,
 giving a false negative. 
 The scheduling tools used for the process tend to be deterministic, rather than
-stochastic (although some senitivity analysis is usually built in as an 
+stochastic (although some sensitivity analysis is usually built in as an 
 add-on); this makes it difficult to have confidence that a working schedule can
 handle the real-world batch-to-batch variability inherent in a process that has
 living cells as its engine.
