--- a/tex/ch2.tex
+++ b/tex/ch2.tex
@@ -116,9 +116,9 @@ techniques that could be applied to solve the problem of buffer preparation
 area design, namely MILP and process scheduling.  Branching out further into
 these fields yields more relevant literature.
 
-\citet{Dedieu:2003} suggests a hybrid apprach using genetic
+\citet{Dedieu:2003} suggests a hybrid approach using genetic
 algorithms and discrete-event simulation to address the problem of 
-multiobjective batch plant design.
+multi-objective batch plant design.
 
 In \citet{Cavin:2004, Cavin:2005}, tabu search is discussed as a methodology to
 optimise the design of multi-purpose batch plants.
@@ -153,7 +153,7 @@ which there are a number of items with associated weights and a number of bins
 with associated capacities.  The aim is to each item to a bin so that the weight
 capacity of the bin is not exceeded and the number of bins is minimised.
 A number of algorithms for both exact and approximate solutions of the
-bin-pakcing problem have been developed. \citet{Korte:2012} state that the
+bin-packing problem have been developed. \citet{Korte:2012} state that the
 bin-packing problem is strongly \textbf{NP}-hard, indicating that efforts
 should be taken to minimise the sample space when dealing with optimising vessel
 selection.
@@ -162,7 +162,7 @@ selection.
 problem where there is a minimum filling constraint.  This is an important
 consideration in vessel selection, usually some minimum fill level,
 \textit{e.g.} 20--30\% is defined so that the impeller in the vessel remains
-sumbmerged during the mixing process and to reduce the volume of cleaning
+submerged during the mixing process and to reduce the volume of cleaning
 solutions or water required to clean the vessel as a fraction of the volume of 
 buffer produced.
 
