--- a/tex/ch3.tex
+++ b/tex/ch3.tex
@@ -10,20 +10,17 @@
 %   Change Control:
 %   When     Who   Ver  What
 %   -------  ----  ---  --------------------------------------------------------
-%   06Jun16  ST    0.1  Begun 
+%   06Jun16  ST    0.1  Begun
 %
 
 \chapter{Data}\label{C.data}
 
 \begin{quote}
-Just as the largest library, badly arranged, is not so useful as a very
-moderate one that is well arranged, so the greatest amount of knowledge, if not
-elaborated by our own thoughts, is worth much less than a far smaller volume
-that has been abundantly and repeatedly though over.  For only by universally
-combining what we know, by comparing every truth with every other, do we fully
-assimilate our own knowledge and get it into our power.
+We have some freedom in setting up our personal standards of beauty, but it is
+especially nice when the things we regard as beautiful are also regarded by
+other people as useful.
 
-\hspace{2cm}--- Arthur Schopenhauer, \emph{On Thinking for Oneself}
+\hspace{2cm}--- Donald Knuth, \emph{Computer Programming as an Art}
 \end{quote}
 
 \section{Introduction}\label{S.intro3}
@@ -32,7 +29,7 @@ This section will outline what the input data might look like, including data
 sources.
 It will outline what form the output data and metrics should take.
 
-For modeling a single process, a typical dataset consists of three distinct
+For modelling a single process, a typical data-set consists of three distinct
 files.
 The first file is a table of data relating to the available selection of
 vessels.
@@ -45,26 +42,35 @@ One particular example, which is based on obfuscated data from a large-scale
 facility, is used throughout this chapter to illustrate the format of the data.
 
 \section{Vessel Data}\label{S.vesseldata}
-
-A vessel dataset will contain entries for $M$ vessels ($M \in \mathbb{N}$).
+The vessel data will contain several parameters for each available vessel size,
+$m \in M$.
+A vessel data-set will contain entries for $\mathcal{M}$ vessel sizes:
+\begin{equation}
+    m \in M; \quad M = \left\{ 0, 1, 2, \ldots, m, \ldots, \left(
+    \mathcal{M} - 1 \right) \right\}
+\end{equation}
+\begin{equation}
+    \mathcal{M} = |M|
+\end{equation}
 
 Typically, when designing a large-scale production facility, buffer preparation
-vessel volumes range from 1,000 l to 30,000 l.
+vessel volumes range from \SI{1000}{\litre} to \SI{30000}{\litre}.
 
 When ordering such a vessel, the stated size of the vessel is usually a nominal
 volume, which will differ from the liquid fill volume and may also differ from
 the maximum working volume.
-It is usual to round the stated or nominal volume to the nearest 1,000 l.
+It is usual to round the stated or nominal volume to the nearest thousand
+litres.
 
 For the purposes of this study, it is assumed that, for each vessel $m \in M$,
 the specified vessel volume, $V_{m}$ is the maximum working volume (in litres)
 of the vessel, which is taken to be the maximum volume of buffer which can be
 prepared in that vessel.
 
-Vessels will also have a minimum working volume. 
-It is usual to assume a minimum fill ratio of about 30\% of the vessel volume. 
+Vessels will also have a minimum working volume.
+It is usual to assume a minimum fill ratio of about 30\% of the vessel volume.
 This limitation arises due to the minimum agitation volume of the impeller in
-the vessel. 
+the vessel.
 For the purposes of this simulation, the minimum fill ratio is a global
 parameter.
 It may be possible to specify a value of minimum fill ratio for every vessel
@@ -76,8 +82,8 @@ Note that absolute costs are not required to find the vessel selection that
 minimises costs.
 Vessel costs tend not to scale linearly with volume.
 
-Sample vessel data is given in \hyperref[tbl.vessel]{Table \ref*{tbl.vessel}}.
-In this dataset, the cost datum for each vessel size has been estimated by
+Sample vessel data are given in \hyperref[tbl.vessel]{Table \ref*{tbl.vessel}}.
+In this data-set, the cost datum for each vessel size has been estimated by
 raising the vessel volume (in litres) to a power of 0.6 and rounding to two
 decimal places.
 Note that the vessel volumes, $V_{m}$, are larger than the nominal volumes
@@ -90,27 +96,35 @@ treated as identifiers and are not used in any calculation.
     \begin{tabular}{l | r | r}
         names & volumes & costs\\
         & $V_{m}$ (l) & $c_{m}$ (--)\\\hline
-        2000 l & 2222.0 & 95.64\\
-        4000 l & 4444.0 & 144.96\\
-        5000 l & 5556.0 & 165.72\\
-        8000 l & 8889.0 & 219.71\\
-        10000 l & 11111.0 & 251.19\\
-        12000 l & 13333.0 & 280.23\\
-        15000 l & 16667.0 & 320.37\\
-        20000 l & 22222.0 & 380.73\\
-        25000 l & 27778.0 & 435.28\\
+        \SI{2000}{\litre} & \SI{2222.0}{} & \SI{95.64}{}\\
+        \SI{4000}{\litre} & \SI{4444.0}{} & \SI{144.96}{}\\
+        \SI{5000}{\litre} & \SI{5556.0}{} & \SI{165.72}{}\\
+        \SI{8000}{\litre} & \SI{8889.0}{} & \SI{219.71}{}\\
+        \SI{10000}{\litre} & \SI{11111.0}{} & \SI{251.19}{}\\
+        \SI{12000}{\litre} & \SI{13333.0}{} & \SI{280.23}{}\\
+        \SI{15000}{\litre} & \SI{16667.0}{} & \SI{320.37}{}\\
+        \SI{20000}{\litre} & \SI{22222.0}{} & \SI{380.73}{}\\
+        \SI{25000}{\litre} & \SI{27778.0}{} & \SI{435.28}{}\\
     \end{tabular}
 \end{table}
 
 \section{Buffer Data}\label{S.bufferdata}
+The buffer data will contain several parameters for each buffer to be prepared,
+$n \in N$.
+A buffer data-set will contain entries for $\mathcal{N}$ buffers:
+\begin{equation}
+    n \in N; \quad N = \left\{ 0, 1, 2, \ldots, n, \ldots, \left(
+    \mathcal{N} - 1 \right) \right\}
+\end{equation}
+\begin{equation}
+    \mathcal{N} = |N|
+\end{equation}
+For each buffer, $n \in N$, the data-set will contain, at a minimum, its
+required preparation volume (in litres), $U_{n}$.
 
-A buffer dataset will contain entries for $N$ buffers ($N \in \mathbb{N}$).
-For each buffer, $n \in N$, the dataset will contain, at a minimum, its
-required preparation volume (in litres), $U_{m}$.
-
-If nothing was known about the scheduling of the prodcution process, a simple
+If nothing was known about the scheduling of the production process, a simple
 simulation could be carried out without scheduling.
-Such a simulation would assume a fixed duration for all operations in the 
+Such a simulation would assume a fixed duration for all operations in the
 preparation procedure and would require knowledge of the cycle time and an
 additional parameter representing the maximum utilisation ratio of the
 preparation vessels (see \hyperref[S.parameters]{Section \ref*{S.parameters}}).
@@ -124,7 +138,7 @@ This time is relative to some batch datum, e.g. the start of the batch or the
 start of downstream processing.
 The choice of datum is unimportant once it is consistently used.
 
-For each buffer, $n \in N$, its duration of first use, 
+For each buffer, $n \in N$, its duration of first use,
 $\Delta t_{\mathit{USE},n}$, is the duration from when the process draws the
 first drop of buffer from its hold vessel to when it finishes drawing the last
 drop of buffer from the same vessel.
@@ -140,11 +154,11 @@ It is assumed that all times and durations are in hours.
 For each buffer, $n$, $\Delta t_{\mathit{USE},n}$ must be sufficiently less
 than the cycle time so that there is opportunity to \emph{turn around} its hold
 vessel (i.e. sufficient time must exist after use of the buffer to clean and
-sterilise the vessel, receive the subsequent batch of buffer and hold for a 
+sterilise the vessel, receive the subsequent batch of buffer and hold for a
 sufficient duration before use of that buffer is required by the subsequent
 batch).
 
-Sample buffer data is given in \hyperref[tbl.buffer]{Table \ref*{tbl.buffer}}.
+Sample buffer data are given in \hyperref[tbl.buffer]{Table \ref*{tbl.buffer}}.
 
 \begin{table}[h!]
     \centering
@@ -154,18 +168,18 @@ Sample buffer data is given in \hyperref[tbl.buffer]{Table \ref*{tbl.buffer}}.
         names & required volumes & use start times & use durations\\
         & $U_{n}$ (l) & $t_{\mathit{USE},n}$ (h) & $\Delta t_{\mathit{USE},n}$
         (h)\\ \hline
-        \text{Buffer \#1} & 19676.0 & 733.87 & 48.99\\
-        \text{Buffer \#2} & 18528.0 & 644.18 & 36.95\\
-        \text{Buffer \#3} & 17346.0 & 684.60 & 49.27\\
-        \text{Buffer \#4} & 15055.0 & 764.96 & 28.01\\
-        \text{Buffer \#5} & 13896.0 & 628.54 & 52.59\\
-        \text{Buffer \#6} & 10267.0 & 728.99 & 53.12\\
-        \text{Buffer \#7} & 10070.0 & 677.94 & 20.86\\
-        \text{Buffer \#8} & 6797.0 & 728.99 & 53.12\\
-        \text{Buffer \#9} & 6716.0 & 612.90 & 70.40\\
-        \text{Buffer \#10} & 4632.0 & 645.50 & 35.63\\
-        \text{Buffer \#11} & 3780.0 & 729.34 & 43.19\\
-        \text{Buffer \#12} & 3694.0 & 678.92 & 42.17\\
+        \text{Buffer \#1} & \SI{19676.0}{} & \SI{733.87}{} & \SI{48.99}{}\\
+        \text{Buffer \#2} & \SI{18528.0}{} & \SI{644.18}{} & \SI{36.95}{}\\
+        \text{Buffer \#3} & \SI{17346.0}{} & \SI{684.60}{} & \SI{49.27}{}\\
+        \text{Buffer \#4} & \SI{15055.0}{} & \SI{764.96}{} & \SI{28.01}{}\\
+        \text{Buffer \#5} & \SI{13896.0}{} & \SI{628.54}{} & \SI{52.59}{}\\
+        \text{Buffer \#6} & \SI{10267.0}{} & \SI{728.99}{} & \SI{53.12}{}\\
+        \text{Buffer \#7} & \SI{10070.0}{} & \SI{677.94}{} & \SI{20.86}{}\\
+        \text{Buffer \#8} & \SI{6797.0}{} & \SI{728.99}{} & \SI{53.12}{}\\
+        \text{Buffer \#9} & \SI{6716.0}{} & \SI{612.90}{} & \SI{70.40}{}\\
+        \text{Buffer \#10} & \SI{4632.0}{} & \SI{645.50}{} & \SI{35.63}{}\\
+        \text{Buffer \#11} & \SI{3780.0}{} & \SI{729.34}{} & \SI{43.19}{}\\
+        \text{Buffer \#12} & \SI{3694.0}{} & \SI{678.92}{} & \SI{42.17}{}\\
     \end{tabular}
 \end{table}
 
@@ -180,7 +194,7 @@ more detail hereafter.
     \centering
     \caption{Global parameters for large-scale example}
     \label{tbl.parameters}
-    \begin{tabular}{l | l | c | c}
+    \begin{tabular}{l | l | r | c}
         symbol & short description & value & unit\\ \hline
         $\lambda$ & process cycle time & 96.0 & h\\
         $\Delta t_{\mathit{PREP,PRE}}$ & prep pre duration & 11.0 & h\\
