--- a/tex/ch4.tex
+++ b/tex/ch4.tex
@@ -16,11 +16,14 @@
 \chapter{Methodology}\label{C.methodology}
 
 \begin{quote}
-We have some freedom in setting up our personal standards of beauty, but it is
-especially nice when the things we regard as beautiful are also regarded by
-other people as useful.
+Just as the largest library, badly arranged, is not so useful as a very
+moderate one that is well arranged, so the greatest amount of knowledge, if not
+elaborated by our own thoughts, is worth much less than a far smaller volume
+that has been abundantly and repeatedly though over.  For only by universally
+combining what we know, by comparing every truth with every other, do we fully
+assimilate our own knowledge and get it into our power.
 
-\hspace{2cm}--- Donald Knuth, \emph{Computer Programming as an Art}
+\hspace{2cm}--- Arthur Schopenhauer, \emph{On Thinking for Oneself}
 \end{quote}
 
 \section{Introduction}\label{S.intro4}
@@ -32,10 +35,10 @@ The selection problem appears to be a close relative of a number of classic
 \textbf{NP}-hard problems in the ``bin-packing'' genre.
 For the scheduling aspect of the problem, initial concepts involved finding an
 API to one of the commercial scheduling packages.
-One intial concept included developing an algorithm to intelligently guess
+One initial concept included developing an algorithm to intelligently guess
 possible vessel selections, and pass these into a scheduling model which
 could be repeatedly be solved using a commercial scheduling package
-to find an optimium selection.
+to find an optimum selection.
 
 On completion of the module on linear programming, it became apparent that
 many bin-packing type problems are most efficiently solved using linear
@@ -44,15 +47,15 @@ Additionally, linear programming could be used to model scheduling constraints.
 
 The vessel selection problem was thus formulated as a MILP problem.
 Firstly, the problem was described mathematically.
-Next, attention was focussed on the method of solution.
+Next, attention was focused on the method of solution.
 There are many available linear programming solvers, both proprietary and open
 source.
 Many proprietary solvers have free academic licenses.
 The XPRESS solver from FICO was familiar to the author from the course module
 in linear programming, but the documentation is poor and the licensing system
 required connection to university servers which proved unreliable remotely.
-The version avaialable through the university also had no python API (one is
-avaialble in more recent versions), which was a strong preference for output
+The version available through the university also had no python API (one is
+available in more recent versions), which was a strong preference for output
 data analysis and plotting.
 
 The CPLEX solver from IBM was investigated.
@@ -61,7 +64,7 @@ which also has excellent documentation.
 
 The MILP problem was thus constructed in python and then solved via the CPLEX
 python API.
-It was apparent that comparitively few lines of the code involved interface
+It was apparent that comparatively few lines of the code involved interface
 with the API.
 With a view to making this research as useful as possible, open-source
 alternatives were also investigated.
@@ -69,40 +72,47 @@ In the end, the PuLP python library was used as a bridge between problem
 generation and problem solution.
 PuLP is an open-source python library which acts as an API to several
 (MI)LP solvers, both commercial and open source, allowing the possibility of a
-fully open-source toolchain for solving the problem.
+fully open-source tool-chain for solving the problem.
 
 \section{Slots}\label{S.slots}
 
-To model the probem as an MILP problem, we must introduce the concept of
+To model the problem as an MILP problem, we must introduce the concept of
 \emph{slots}.
 Noting that there is a buffer hold vessel for each buffer, it is evident that
 a feasible but inefficient solution could involve installing a dedicated,
 suitably sized, preparation vessel for each hold vessel.
 Any solution involving more than this number of preparation vessels would not
 be optimal.
-As a result, we have an upper limit of $N$ on the number of required
+As a result, we have an upper limit of $\mathcal{N}$ on the number of required
 preparation vessels.
-The model is thus constructed with $P$ \emph{slots}, where
+The model is thus constructed with $\mathcal{P}$ \emph{slots}, where
 \begin{equation}
-    P = N
+    \mathcal{P} = \mathcal{N}
 \end{equation}
-and a \emph{slot} is a notional space which may be occupied by a vessel, or may
+A slot, $p \in P$ is a notional space which may be occupied by a vessel, or may
 be empty.
-Note that slots do not have any physical significance, i.e. in a physical
-plant, floor sapce is assgined to physical vessels, rather than notional slots.
+\begin{equation}
+    p \in P; \quad P = \left\{ 0, 1, 2, \ldots, p, \ldots, \left( 
+    \mathcal{P} - 1 \right) \right\}
+\end{equation}
+Note that slots do not have any physical significance, i.e. in a real-world
+facility, floor space is assigned to physical vessels, rather than notional
+slots.
 
 \section{Objective Function}\label{S.objfn}
 
-The vessel selection problem may be described as a series of linear constraints.
-These constraints are applied to find the optimium value of an objective
+The vessel selection problem may be described as a series of linear
+constraints.
+These constraints are applied to find the optimum value of an objective
 function, which we seek to minimise.
 The primary objective function is the total cost of vessels.
 We find this by summing the vessel costs for all vessels present in slots.
-Recall that the vessel data set contains entries for $M$ vessel sizes, each
-of which has an associated cost, $c_{m}$.
+Recall that the vessel data set contains entries for $\mathcal{M}$ vessel
+sizes, each of which has an associated cost, $c_{m}$.
 
 We now introduce the first decision variable, $\boldsymbol{y}_{mp}$.
-This a binary decision variable with dimensions $M \times P$.
+This a binary decision variable with dimensions
+$\mathcal{M} \times \mathcal{P}$.
 Note that binary decision variables may only take the values 0 and 1, i.e.
 \begin{equation}
     \boldsymbol{y}_{mp} \in \left\{ 0, 1 \right\} \quad \forall m \in M \quad
@@ -135,7 +145,7 @@ realistic.
 
 The first constraint to be added is the limitation that a buffer must be
 prepared in exactly one slot.
-This constraint means that we must preprare each buffer once per cycle
+This constraint means that we must prepare each buffer once per cycle
 and also that the buffer is always prepared in the same slot, i.e. slot
 selection for every cycle is identical.
 
@@ -147,7 +157,8 @@ otherwise, i.e.
     \forall p \in P
     \label{eq.x}
 \end{equation}
-Note that $\boldsymbol{x}_{np}$ has dimensions of $N \times P$.
+Note that $\boldsymbol{x}_{np}$ has dimensions of
+$\mathcal{N} \times \mathcal{P}$.
 The possible states of $\boldsymbol{x}_{np}$ may be described thus:
 \begin{equation}
     \boldsymbol{x}_{np} =
@@ -166,7 +177,7 @@ The following constraint can now be defined:
 
 The second constraint to be added is the requirement that at most one vessel
 may inhabit a given slot.
-This is not directly analagous to the first constraint; it is possible to
+This is not directly analogous to the first constraint; it is possible to
 use the same \emph{sized} vessel in many slots, but a maximum of one vessel
 \emph{instance} may inhabit any given slot.
 Note that this inequality allows for the possibility of unused slots, i.e. the
@@ -184,7 +195,7 @@ it has an appropriate volume to prepare all buffers assigned to the slot.
 There are two facets to the above statement.
 Firstly, we cannot produce buffer volumes greater than the preparation vessel
 maximum working volume.
-Additionally, vessels have a minimum fill ratio, $r_{MINFILL}$, ususally in the
+Additionally, vessels have a minimum fill ratio, $r_{MINFILL}$, usually in the
 range 10 - 30 \%.
 The minimum fill ratio is generally a function of the minimum stir volume of a
 vessel's impeller.
@@ -316,7 +327,7 @@ procedures being of fixed duration.
 
 \subsection{Hold Procedure Duration}\label{SS.constr5}
 
-We now intoduce the buffer hold time decision variable, $\boldsymbol{z}_{n}$,
+We now introduce the buffer hold time decision variable, $\boldsymbol{z}_{n}$,
 which has dimensions of $N$:
 \begin{equation}
     \Delta t_{\mathit{HOLD,MIN}} \le \boldsymbol{z}_{n} \le 
@@ -324,11 +335,8 @@ which has dimensions of $N$:
     \boldsymbol{z}_{n} \in \mathbb{R} \quad \forall n \in N
     \label{eq.z}
 \end{equation}
-This is the only real-valued variable in the model.
+This is the only variable in the model that is not a Boolean variable.
 
-%TODO:
-\textbf{TODO: use mathit for all remaining textual subscripts (stopped here).
- - including Notation section.}
 The first constraint required for the complete model is the limitation that the
 total duration of each hold procedure must not be greater than the cycle time.
 If this constraint is not observed, a hold procedure in a given batch may not
@@ -342,7 +350,7 @@ have finished before the hold procedure for the next batch is due to start.
 
 \subsection{Introducing the Scheduling Constraint}\label{SS.schedintro}
 
-The scheduling constraint may be descibed quite simply:
+The scheduling constraint may be described quite simply:
 Ensure that no two preparation operations overlap in time in a given slot.
 
 Since we have a constant preparation duration, 
@@ -377,7 +385,8 @@ The latter binary variable, $ \boldsymbol{w}_{nkp} $ is defined below.
     \forall k \in N \quad \forall p \in P
     \label{eq.w}
 \end{equation}
-Note that the above variable has dimensions $N \times N \times P$, but we don't
+Note that the above variable has dimensions 
+$\mathcal{N} \times \mathcal{N} \times \mathcal{P}$, but we don't
 need each constituent binary variable to describe the problem.
 Since $w_{nnp}$ is not required and $w_{nkp} = w_{knp}$, we only need to
 describe constraints where $k > n$.
@@ -471,7 +480,7 @@ shorthand for the expression below:
         \end{alignedat}
     \end{cases}
 \end{equation}
-Selection bwtween the two constraints above can be performed by using the 
+Selection between the two constraints above can be performed by using the 
 \emph{big-M} method, whereby a large constant, $ \mathbb{M} $, is used to force
 selection of one or other of the constraints
 based on the value of an additional binary.
@@ -516,11 +525,12 @@ Thus, when deciding which of two such procedures occurs first, we can use
 $ t_{\mathit{USE},n}^{*} - \boldsymbol{z}_{n} $ to mark the timing of the
 preparation procedure of a given buffer $n$.
 Note that this may take a negative value, which must be corrected by adding a
-factor of $\lambda$ to bring the vaue back into the single-cycle range, as we
+factor of $\lambda$ to bring the value back into the single-cycle range, as we
 can't use a modulo expression in an MILP constraint.
-Another binary variable, $ \boldsymbol{q}_{n} $ is introduced to indicate if
+
+Another binary variable, $ \boldsymbol{q}_{n} $, is introduced to indicate if
 $ t_{\mathit{USE},n}^{*} - \boldsymbol{z}_{n} < 0 $, i.e. to indicate if 
-$ t_{\mathit{USE},n}^{*} - \boldsymbol{z}_{n}$ occurs in the previous cycle.
+$ t_{\mathit{USE},n}^{*} - \boldsymbol{z}_{n}$ falls in the previous cycle.
 \begin{equation}
     \boldsymbol{q}_{n} \in \left\{ 0, 1 \right\} \quad \forall n \in N
     \label{eq.q}
@@ -553,16 +563,19 @@ factor of $\lambda$ to $t_{\mathit{USE},n}^{*} - \boldsymbol{z}_{n}$, which is
 equivalent to moving from an event in a batch which occurs in the previous
 cycle to the same event in a subsequent batch, which will occur in the current
 cycle.
-The switch that adds this factor $\lambda$ is the variable $q_{n}$.
+The switch that adds this factor of $\lambda$ is the variable
+$\boldsymbol{q}_{n}$.
 The expression 
 $t_{\mathit{USE},n}^{*} - \boldsymbol{z}_{n} + \boldsymbol{q}_{n} \lambda$
 is thus an appropriate replacement for the expression
 $\left( t_{\mathit{USE},n}^{*} - \boldsymbol{z}_{n} \right) \mod \lambda$.
-The above expression, which represents when preparation procedure $n$ occurs,
-could be replaced by a new variable, for brevity, but since the expression
-contains decision variables, doing so would require the specification of an
-addtional decision variable and an additional set of constraints to define it.
-This would add unneccesary complexity to the model.
+
+For the sake of brevity in the equations, the above expression, which
+represents when preparation procedure $n$ occurs, could be replaced by a new
+variable but since the expression contains decision variables, doing so would
+require the specification of an additional decision variable and an additional
+set of constraints to define it.
+This would add unnecessary complexity to the model.
 
 
 The truth table for $ \boldsymbol{q}_{n} $ is given below.
@@ -594,10 +607,18 @@ first.
     \end{split}
     \label{eq.constr8b}
 \end{equation}
-A truth tale for $\boldsymbol{u}_{nk}$ is given below. As was explained earlier
-in this Section, the long expression in the first column is maintained because
-replacing the terms in (round) brackets by new parameters would increase the
-complexity of the model.
+A truth table for $\boldsymbol{u}_{nk}$ is given below.
+In the table below, $\boldsymbol{u}_{nk}^{\left( 1 \right)}$ refers to the
+first inequality above and $\boldsymbol{u}_{nk}^{\left( 2 \right)}$ refers to
+the second.  Applying both inequalities is equivalent to performing a
+logical-and, i.e. 
+$\boldsymbol{u}_{nk} = \boldsymbol{u}_{nk}^{\left( 1 \right)} \land
+    \boldsymbol{u}_{nk}^{\left( 2 \right)}$.
+
+ As was explained
+earlier in this section, the long expression in the first column is maintained
+because replacing the terms in (round) brackets by new parameters would
+increase the complexity of the model.
 \begin{table}[h!]
     \centering
     \caption{Truth table for $\boldsymbol{u}_{nk}$}
@@ -796,12 +817,232 @@ Where:
     \tag{\ref{eq.z}}
 \end{equation}
 
-Mathcal-P: $|\mathcal{P}|$
+\section{Further Optimisation}\label{S.implementation}
+
+\subsection{Goal programming}\label{SS.goal}
+The complete model above may be solved to give the required number of vessels
+that correspond to the minimum cost.
+There may be many possible feasible solutions that correspond to this minimum
+cost and would yield the same set of vessels (though the selected preparation
+vessels may not necessarily be used to prepare the same buffers).
+Thus, there may be many ways to represent an optimal process schedule.
+If, for example, the data described in
+\hyperref[C.data]{Chapter \ref*{C.data}} were to be used as an input to the
+complete model, a feasible optimal schedule, such as that shown in the figure
+below may be generated.
+The plot is discussed in more detail in
+\hyperref[C.results]{Chapter \ref*{C.results}}, but it is also included here to
+illustrate the effects of goal programming.
+\begin{figure}
+    \centering
+    \includegraphics[angle=0,scale=0.55]{../examples/large-scale/plot1.pdf}
+    \caption{Large-Scale Example -- Primary Objective}
+    \label{fig.primary}
+\end{figure}
+
+Note that the solution requires four vessels, with volumes of
+\SI{8000}{\litre}, \SI{10000}{\litre}, \SI{15000}{\litre} and
+\SI{20000}{\litre} respectively.  
+Recall that one of our decision variables is $\boldsymbol{z}_{n}$, the buffer
+hold duration.
+In the figure below, buffers \#5, \#8 and \#9 are scheduled such that their 
+hold procedures are bottlenecked, i.e. the start of the hold procedure for one
+cycle coincides with the end of the hold procedure for the previous cycle.
+For each of these three buffers, it can also be seen that there exists some
+free time after each of their respective preparation procedures.
+Delaying the preparation of each of these three buffers by e.g. 1 hour would
+also give an optimal solution, with the vessel selection unchanged.
+Note that delaying a preparation by some amount $\delta$ is equivalent to 
+reducing $\boldsymbol{z}_{n}$ by $\delta$.
+Recall also that $\boldsymbol{z}_{n}$ has a lower bound, 
+$\Delta t_{\mathit{HOLD,MIN}}$.
+In terms of visualising a realistic schedule, it is desirable to minimise the
+hold times, i.e. we wish to define a new objective function, to be minimised:
+\begin{equation}
+    \boldsymbol{Y} = \sum_{n \in N} \boldsymbol{z}_{n} \quad \forall n \in N
+    \label{eq.objfn2}
+\end{equation}
+Note that we want to maintain the original optimum objective function value,
+i.e. we define
+\begin{equation}
+    Z^{\prime} = \min \boldsymbol{Z}
+\end{equation}
+In the above equation, $Z^{\prime}$ is the optimal objective function value obtained by solving
+the complete model.
+Note that $Z^{\prime}$ is not bolded, as it is treated as a constant parameter
+in our second-pass model.
+The complete model is then re-run with the original objective function replaced
+by the new objective, $\min \boldsymbol{Y}$, with the following constraint
+added:
+\begin{equation}
+    \sum_{m \in M} \sum_{p \in P} c_m \boldsymbol{y}_{mp} = Z^{\prime}
+    \label{eq.constr10}
+\end{equation}
+
+Implementing the secondary goal programming model on the same data-set yields
+the following plot.
+Note that the buffer hold procedures for buffers \#5, \#8 and \#9 are no longer
+bottlenecked.
+Note also that, although the same preparation vessels are selected (i.e. the
+same minimal cost is obtained), some buffers are now prepared in different
+vessels to those originally assigned.
+For example, in the original result, buffer \#8 was prepared in a 15,000 l
+vessel and with the secondary goal added, it is prepared in am 8,000 l vessel.
+
+\begin{figure}
+    \centering
+    \includegraphics[angle=0,scale=0.55]{../examples/large-scale/plot2.pdf}
+    \caption{Large-Scale Example -- Secondary Objective}
+    \label{fig.secondary}
+\end{figure}
+
+\subsection{Secondary Model Summary}\label{SS.model2summary}
+
+The secondary model is summarised below:
+
+Minimise:
+\begin{equation}
+    \boldsymbol{Y} = \sum_{n \in N} \boldsymbol{z}_{n} \quad \forall n \in N
+    \tag{\ref{eq.objfn2}}
+\end{equation}
+Subject to:
+\begin{equation}
+    \sum_{p \in P} \boldsymbol{x}_{np} = 1 \quad \forall n \in N
+    \tag{\ref{eq.constr1}}
+\end{equation}
+\begin{equation}
+    \sum_{m \in M} \boldsymbol{y}_{mp} \le 1 \quad \forall p \in P
+    \tag{\ref{eq.constr2}}
+\end{equation}
+\begin{equation}
+    U_{n} \boldsymbol{x}_{np} - \sum_{m \in M} V_{m} \boldsymbol{y}_{mp} \le 0
+    \quad \forall n \in N, \quad \forall p \in P
+    \tag{\ref{eq.constr3a}}
+\end{equation}
+\begin{equation}
+    V_{\mathit{MAX}} \boldsymbol{x}_{np} + r_{\mathit{MINFILL}} \sum_{m \in M}
+    V_{m} \boldsymbol{y}_{mp} \le U_{n} + V_{\mathit{MAX}} \quad \forall n \in
+    N, \quad \forall p \in P
+    \tag{\ref{eq.constr3b}}
+\end{equation}
+\begin{equation}
+    \Delta t_{\mathit{PREP,TOTAL}} \sum_{n \in N} \boldsymbol{x}_{np} \le 
+    r_{\mathit{UTIL}} \lambda \quad \forall p \in P
+    \tag{\ref{eq.constr4}}
+\end{equation}
+\begin{equation}
+    \boldsymbol{z}_{n} \le \lambda - \left( \Delta t_{\mathit{HOLD,PRE}} +
+    \Delta t_{\mathit{TRANSFER}} + \Delta t_{\mathit{USE},n} + \Delta
+    t_{\mathit{HOLD,POST}} \right) \quad \forall n \in N
+    \tag{\ref{eq.constr5}}
+\end{equation}
+\begin{equation}
+    \begin{split}
+        \begin{alignedat}{3}
+            \boldsymbol{x}_{np} & {}+{} & \boldsymbol{x}_{kp} & {}-{} & 2
+            \boldsymbol{w}_{nkp} & \ge 0\\
+            \boldsymbol{x}_{np} & {}+{} & \boldsymbol{x}_{kp} & {}-{} &
+            \boldsymbol{w}_{nkp} & \le 1\\
+        \end{alignedat}
+    \end{split}
+    \quad\quad
+    \begin{split}
+        \forall n \in N, \quad \forall k \in N, k > n
+    \end{split}
+    \tag{\ref{eq.constr6}}
+\end{equation}
+\begin{equation}
+    \sum_{p \in P} \boldsymbol{w}_{nkp} - \boldsymbol{v}_{nk} \le 0 \quad
+    \forall n \in N, \quad \forall k \in N, k > n
+    \tag{\ref{eq.constr7}}
+\end{equation}
+\begin{equation}
+    \begin{split}
+        \begin{alignedat}{2}
+            \boldsymbol{z}_{n} & {}-{} & \lambda \boldsymbol{q}_{n} & \le
+            t_{\mathit{USE},n}^{*}\\
+            \boldsymbol{z}_{n} & {}-{} & \lambda \boldsymbol{q}_{n} & \ge
+            t_{\mathit{USE},n}^{*} - \lambda
+        \end{alignedat}
+    \end{split}
+    \quad\quad
+    \begin{split}
+        \forall n \in N
+    \end{split}
+    \tag{\ref{eq.constr8a}}
+\end{equation}
+\begin{equation}
+    \begin{split}
+        \boldsymbol{z}_{n} - \boldsymbol{z}_{k} - \lambda \boldsymbol{q}_{n}
+        + \lambda \boldsymbol{q}_{k} + \lambda \boldsymbol{u}_{nk} &\ge
+        t_{\mathit{USE},n}^{*} - t_{\mathit{USE},k}^{*}\\
+        \boldsymbol{z}_{n} - \boldsymbol{z}_{k} - \lambda \boldsymbol{q}_{n}
+        + \lambda \boldsymbol{q}_{k} + \lambda \boldsymbol{u}_{nk} &\le
+        t_{\mathit{USE},n}^{*} - t_{\mathit{USE},k}^{*} + \lambda\\
+        \forall n \in N, \quad \forall k \in N, k > n
+    \end{split}
+    \tag{\ref{eq.constr8b}}
+\end{equation}
+\begin{equation}
+    \begin{split}
+        \begin{alignedat}{10}
+            &\boldsymbol{z}_{n} {}-{} &\boldsymbol{z}_{k} {}+{} &2 \lambda
+            \boldsymbol{u}_{nk} {}-{} &2 \lambda \boldsymbol{v}_{nk} &\ge
+            &t_{\mathit{USE},n}^{*} {}-{} &t_{\mathit{USE},k}^{*} {}+{}
+            &\Delta &t_{\mathit{PREP,TOTAL}} {}-{} 2 &\lambda\\
+            - &\boldsymbol{z}_{n} {}+{} &\boldsymbol{z}_{k} {}-{} &2 \lambda
+            \boldsymbol{u}_{nk} {}-{} &2 \lambda \boldsymbol{v}_{nk} &\ge
+            - &t_{\mathit{USE},n}^{*} {}+{} &t_{\mathit{USE},k}^{*} {}+{}
+            &\Delta &t_{\mathit{PREP,TOTAL}} {}-{} 4 &\lambda
+        \end{alignedat}
+        \\\forall n \in N, \quad \forall k \in N, k > n
+    \end{split}
+    \tag{\ref{eq.constr9}}
+\end{equation}
+\begin{equation}
+    \sum_{m \in M} \sum_{p \in P} c_m \boldsymbol{y}_{mp} = Z^{\prime}
+    \tag{\ref{eq.constr10}}
+\end{equation}
+Where:
+\begin{equation}
+    \boldsymbol{q}_{n} \in \left\{ 0, 1 \right\} \quad \forall n \in N
+    \tag{\ref{eq.q}}
+\end{equation}
+\begin{equation}
+    \boldsymbol{u}_{nk} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N
+    \label{eq.u}
+\end{equation}
+\begin{equation}
+    \boldsymbol{v}_{nk} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N
+    \tag{\ref{eq.v}}
+\end{equation}
+\begin{equation}
+    \boldsymbol{w}_{nkp} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N \quad \forall p \in P
+    \tag{\ref{eq.w}}
+\end{equation}
+\begin{equation}
+    \boldsymbol{x}_{np} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall p \in P
+    \tag{\ref{eq.x}}
+\end{equation}
+\begin{equation}
+    \boldsymbol{y}_{mp} \in \left\{ 0, 1 \right\} \quad \forall m \in M \quad
+    \forall p \in P
+    \tag{\ref{eq.y}}
+\end{equation}
+\begin{equation}
+    \Delta t_{\mathit{HOLD,MIN}} \le \boldsymbol{z}_{n} \le \Delta
+    t_{\mathit{HOLD,MAX}}; \quad \boldsymbol{z}_{n} \in \mathbb{R} \quad
+    \forall n \in N
+    \tag{\ref{eq.z}}
+\end{equation}
+
 
 \section{Implementation}\label{S.implementation}
 
 \subsection{Code and APIs etc}\label{SS.completesummary}
-
-\subsection{Goal programming}\label{SS.completesummary}
 
 \subsection{Plotting}\label{SS.completesummary}
