--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -39,7 +39,9 @@ subfigure}
 \usepackage{lineno}
 \usepackage[hyphens]{url}
 
-\usepackage{longtable,tabu,siunitx}
+\usepackage{longtable,tabu}
+\usepackage{siunitx}
+\sisetup{input-ignore={,},input-decimal-markers={.}}
 \usepackage[hidelinks]{hyperref}
 \usepackage{doi}
 
